--- a/src/app/site/site-structure/navbar/navbar.component.html
+++ b/src/app/site/site-structure/navbar/navbar.component.html
@@ -2,40 +2,38 @@
      class="navbar-left"
      [ngClass]="{'navbar-open': navbarOpen}">
 
-  <!-- Main Nav -->
-  <ul class="nav main-nav">
+  <!-- Logo -->
+  <ul class="nav nav-logo">
 
     <!-- Logo -->
-    <li class="logo-element">
+    <li class="element element-logo">
       <a href="/#/" *ngIf="!navbarOpen">
-        <img class="logo-icon" src="/assets/images/nav-logo-icon.png"/>
+        <img class="logo" src="/assets/images/nav-logo-icon.png"/>
       </a>
       <a href="/#/" *ngIf="navbarOpen">
         <img class="logo" src="/assets/images/nav-logo.png"/>
       </a>
     </li>
 
+  </ul>
+
+
+  <!-- Main Nav -->
+  <ul class="nav nav-main">
+
     <!-- Element -->
     <li class="element">
-      <a tooltip="Element 1"
-         placement="right"
-         container="body"
-         [isDisabled]="navbarOpen"
-         routerLinkActive="active-link"
-         routerLink="/element1">
-        <i class="fa fa-fw fa-code"></i>
-        <span *ngIf="navbarOpen">Element 1</span>
+      <a routerLinkActive="active-link"
+         routerLink="/search">
+        <i class="fa fa-fw fa-search"></i>
+        <span *ngIf="navbarOpen">Search</span>
       </a>
     </li>
     <li class="element">
-      <a tooltip="Element 2"
-         placement="right"
-         container="body"
-         [isDisabled]="navbarOpen"
-         routerLinkActive="active-link"
-         routerLink="/element2">
-        <i class="fa fa-fw fa-search"></i>
-        <span *ngIf="navbarOpen">Element 2</span>
+      <a routerLinkActive="active-link"
+         routerLink="/advanced">
+        <i class="fa fa-fw fa-code"></i>
+        <span *ngIf="navbarOpen">Advanced</span>
       </a>
     </li>
 
@@ -43,45 +41,55 @@
 
 
   <!-- Bottom Aux Nav -->
-  <ul class="nav aux-nav">
+  <ul class="nav nav-aux">
 
     <!-- User -->
-    <li class="dropdown user-container" dropdown>
-      <a class="dropdown-toggle" dropdownToggle>
-        <div class="user-icon">UN</div>
+    <li class="element dropdown" dropdown>
+      <a dropdownToggle>
+        <i class="fa fa-fw fa-user-circle"></i>
         <span *ngIf="navbarOpen">User Name</span>
       </a>
 
-      <ul *dropdownMenu class="dropdown-menu dropdown-menu-besides-right dropdown-menu-bottom" role="menu">
+      <ul *dropdownMenu
+          class="dropdown-menu dropdown-menu-besides-right dropdown-menu-bottom"
+          role="menu">
 
         <!-- Manage User Account -->
-        <li><a [routerLink]="['/update-user']">Profile</a></li>
+        <li><a routerLink="/update-user">Profile</a></li>
 
       </ul>
     </li>
 
     <!-- Help -->
-    <li class="dropdown" dropdown>
-      <a class="dropdown-toggle" dropdownToggle>
-        <i class="fa fa-fw fa-question-circle help-icon"></i>
+    <li class="element dropdown" dropdown>
+      <a dropdownToggle>
+        <i class="fa fa-fw fa-question-circle"></i>
         <span *ngIf="navbarOpen">Help</span>
       </a>
-      <ul *dropdownMenu class="dropdown-menu dropdown-menu-besides-right dropdown-menu-bottom" role="menu">
+
+      <ul *dropdownMenu
+          class="dropdown-menu dropdown-menu-besides-right dropdown-menu-bottom"
+          role="menu">
 
         <!-- Help -->
-        <li><a [routerLink]="['/help']">Help Docs</a></li>
+        <li><a routerLink="/help">Help Docs</a></li>
 
         <!-- About -->
-        <li><a [routerLink]="['/about']">About</a></li>
+        <li><a routerLink="/about">About</a></li>
 
       </ul>
     </li>
 
+    <!-- Divider -->
+    <li class="element element-divider"></li>
+
     <!-- Collapse/Expand -->
-    <li class="element"
+    <li class="element "
         (click)="toggleNavbar()">
       <a>
-        <i class="fa fa-fw collapse-icon" [class.fa-angle-double-right]="!navbarOpen" [class.fa-angle-double-left]="navbarOpen"></i>
+        <i class="fa fa-fw collapse-icon"
+           [class.fa-angle-double-right]="!navbarOpen"
+           [class.fa-angle-double-left]="navbarOpen"></i>
         <span *ngIf="navbarOpen">Collapse</span>
       </a>
     </li>
