--- a/src/app/site/site-structure/navbar/navbar.component.scss
+++ b/src/app/site/site-structure/navbar/navbar.component.scss
@@ -8,23 +8,29 @@ $color3: #3c91e6;
 $color4: #c1c8e4;
 $color5: #8860d0;
 
-$nav-open-width: 224px;
-$nav-closed-width: 54px;
+// Specify these
 $nav-background-color: $color2;
+$nav-closed-width: 54px;
+$nav-open-width: 224px;
 
-$nav-divider-height: 20px;
-
-$nav-element-height: $nav-closed-width;
-$nav-element-hover-color: $color3;
+$nav-element-font-color: $color-text-white;
+$nav-element-font-dark-color: $color-text-black;
 $nav-element-font-size: 16px;
+$nav-element-margin: 20px;
+$nav-element-hover-color: $color3;
 $nav-element-icon-size: 20px;
-$nav-element-icon-margin-left: ($nav-closed-width - 25.7px)/2;
+$nav-element-icon-width: 27.5px;
 $nav-element-selected-background-color: $color3;
-$nav-element-text-margin-left: 16px;
+$nav-element-text-margin-left: 20px;
 
-$nav-logo-element-color-bg: $color1;
-$nav-logo-element-height: $nav-element-height;
-$nav-logo-element-img-margin: 4px;
+$nav-element-divider-margin: 10px;
+
+$nav-element-logo-color-bg: $color1;
+$nav-element-logo-img-margin: 4px;
+$nav-element-logo-img-height: 50px;
+
+// Calculated
+$nav-element-icon-margin-left: ($nav-closed-width - $nav-element-icon-width) / 2;
 
 
 // -------------------------------------------------
@@ -64,10 +70,11 @@ $nav-logo-element-img-margin: 4px;
   width: $nav-closed-width;
   z-index: 10000;
 
+
   // A normal element
   .element {
 
-    height: $nav-element-height;
+    margin: $nav-element-margin 0 0;
     width: $nav-closed-width;
 
     &:hover {
@@ -84,22 +91,56 @@ $nav-logo-element-img-margin: 4px;
         text-decoration: none;
       }
 
-      @include font-normal($nav-element-font-size, $nav-element-height);
-      @include font-light();
+      @include font-normal($nav-element-font-size);
+      @include font-light($nav-element-font-color);
 
       > i.fa {
-        margin-left: $nav-element-icon-margin-left;
         font-size: $nav-element-icon-size;
+        margin-left: $nav-element-icon-margin-left;
+
       }
 
       > span {
-        margin-left: 10px;
         font-size: $nav-element-font-size;
+        margin-left: 10px;
       }
 
     }
 
   }
+
+  :last-child.element {
+    margin-bottom: $nav-element-margin;
+  }
+
+  // A divider element
+  .element-divider {
+
+    border-bottom: $nav-element-font-color solid 1px;
+    margin-left: $nav-element-divider-margin;
+    margin-right: $nav-element-divider-margin;
+
+    height: 0;
+    width: $nav-closed-width - 2 * $nav-element-divider-margin;
+
+  }
+
+  // The element that contains the logo
+  .element-logo {
+
+    background-color: $nav-element-logo-color-bg;
+
+    img {
+      margin: $nav-element-logo-img-margin;
+
+      &.logo {
+        height: auto;
+        width: $nav-closed-width - 2 * $nav-element-logo-img-margin;
+      }
+
+    }
+  }
+
 
   // Adjustments for when the navbar is open
   &.navbar-open {
@@ -107,6 +148,16 @@ $nav-logo-element-img-margin: 4px;
 
     .element {
       width: $nav-open-width;
+    }
+
+    .element-divider {
+      width: $nav-open-width - 2 * $nav-element-divider-margin;
+    }
+
+    .element-logo {
+      img.logo {
+        width: $nav-open-width - 2 * $nav-element-logo-img-margin;
+      }
     }
 
     .main-nav {
@@ -122,44 +173,27 @@ $nav-logo-element-img-margin: 4px;
     }
   }
 
-  // Main nav: The upper area of the navbar where main site nav buttons exist
-  .main-nav {
-
+  .nav-logo {
     left: 0;
     top: 0;
 
-    // The element that contains the logo
-    .logo-element {
-
-      background-color: $nav-logo-element-color-bg;
-
-      height: $nav-element-height;
-      width: $nav-closed-width;
-
-      img {
-        margin: $nav-logo-element-img-margin;
-
-        &.logo-icon {
-          height: auto;
-          width: $nav-closed-width - 2*$nav-logo-element-img-margin;
-        }
-
-        &.logo {
-          height: auto;
-          width: $nav-open-width - 2*$nav-logo-element-img-margin;
-        }
-      }
+    .element-logo {
+      margin: 0;
     }
 
   }
 
-  // Main nav: The lower area of the navbar where auxilliary nav buttons exist
-  .aux-nav {
+  // Main nav: The upper area of the navbar where main site nav buttons exist
+  .nav-main {
+    left: 0;
+    top: $nav-element-logo-img-height + $nav-element-logo-img-margin;
+  }
 
+  // Main nav: The lower area of the navbar where auxilliary nav buttons exist
+  .nav-aux {
     position: absolute;
     bottom: 0;
     left: 0;
-
   }
 
 }
