--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,7 @@ html {
     top: 30%;
 
     .message {
-      @include font-normal(24px, 30px);
+      @include font-normal(24px);
       margin: 10px;
     }
   }
