--- a/src/app/site/site-structure/page-container/_variables.scss
+++ b/src/app/site/site-structure/page-container/_variables.scss
@@ -1,5 +1,6 @@
-@import '../../theme/fonts';
+@import '../../../theme/fonts';
 
 $header-banner-height: $font-line-height;
 $footer-banner-height: $font-line-height;
 $copyright-banner-height: $font-line-height;
+
