--- a/src/app/site/site-structure/page-container/page-container.component.scss
+++ b/src/app/site/site-structure/page-container/page-container.component.scss
@@ -1,4 +1,4 @@
-@import '../../theme/colors';
+@import '../../../theme/colors';
 @import './variables';
 
 header.page-header {
@@ -34,28 +34,6 @@ footer.page-footer {
   height: $header-banner-height;
 }
 
-.page-content {
-  background-color: red;
-  margin-top: 0;
-  margin-bottom: 0;
-
-  &.header-active {
-    margin-top: $header-banner-height;
-  }
-
-  &.copyright-active {
-    margin-bottom: $footer-banner-height;
-
-    &.footer-active {
-      margin-bottom: $footer-banner-height + $copyright-banner-height;
-    }
-  }
-
-  &.footer-active {
-    margin-bottom: $footer-banner-height;
-  }
-}
-
 .page-footer {
   bottom: 0;
   left: 0;
@@ -68,4 +46,29 @@ footer.page-footer {
   top: 0;
   position: fixed;
   width: 100%;
+}
+
+.page-content {
+  background-color: red;
+
+  margin-bottom: 0;
+  margin-top: 0;
+
+  .header-active & {
+    margin-top: $header-banner-height;
+  }
+
+  .footer-active & {
+    margin-bottom: $footer-banner-height;
+  }
+
+  .copyright-active & {
+    margin-bottom: $copyright-banner-height;
+  }
+
+  .copyright-active.footer-active &{
+    margin-bottom: $footer-banner-height + $copyright-banner-height;
+  }
+
+
 }
