--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
-@import './app/shared/styles/mixins';
-@import './app/site/theme/colors';
-@import './app/site/theme/fonts';
+@import './app/theme/fonts';
+@import './app/theme/ngx-bootstrap';
 
 /* You can add global styles to this file, and also import other style files */
 
@@ -15,28 +14,4 @@ body {
 
 html {
   min-height: 100%;
-}
-
-.site-loading-container {
-  background-color: $color-bg-light;
-  bottom: 0;
-  left: 0;
-  position: fixed;
-  right: 0;
-  text-align: center;
-  top: 0;
-
-  .site-loading-message {
-    left: 0;
-    min-height: 100%;
-    position: fixed;
-    right: 0;
-    text-align: center;
-    top: 30%;
-
-    .message {
-      @include font-normal(24px);
-      margin: 10px;
-    }
-  }
 }
