Refactoring a bit to follow angular style guide for organizing code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="app-container">
 
-  <page-container>
+  <site-container>
 
     <router-outlet></router-outlet>
 
-  </page-container>
+  </site-container>
 
 </div>
