--- a/src/app/core/site-container/site-container.component.html
+++ b/src/app/core/site-container/site-container.component.html
@@ -1,7 +1,7 @@
-<!-- Page Header -->
-<header class="page-header">
+<!-- Site Header -->
+<header class="site-header">
 
-  <div class="page-banner" *ngIf="null != bannerContent">
+  <div class="site-banner" *ngIf="null != bannerContent">
     <div class="header-banner"
          [innerHtml]="bannerContent"></div>
   </div>
@@ -9,29 +9,29 @@
 </header>
 
 
-<!-- Page content -->
+<!-- Site content -->
 <section [ngClass]="{'header-active footer-active' : null != bannerContent, 'copyright-active': null != copyrightContent}">
 
-  <navbar>
+  <site-navbar>
 
-    <section class="page-content">
+    <section class="site-content">
       <ng-content></ng-content>
     </section>
 
-  </navbar>
+  </site-navbar>
 
 </section>
 
 
-<!-- Page Footer -->
-<footer class="page-footer">
+<!-- Site Footer -->
+<footer class="site-footer">
 
-  <div class="page-banner" *ngIf="null != copyrightContent">
+  <div class="site-banner" *ngIf="null != copyrightContent">
     <div class="copyright-banner"
          [innerHtml]="copyrightContent"></div>
   </div>
 
-  <div class="page-banner" *ngIf="null != bannerContent">
+  <div class="site-banner" *ngIf="null != bannerContent">
     <div class="footer-banner"
          [innerHtml]="bannerContent"></div>
   </div>
