--- a/src/app/core/site-navbar/_shared.scss
+++ b/src/app/core/site-navbar/_shared.scss
@@ -1,6 +1,6 @@
-@import '../../../theme/colors';
-@import '../../../theme/fonts';
-@import '../page-container/variables';
+@import '../../theme/colors';
+@import '../../theme/fonts';
+@import '../site-container/shared';
 
 // Specify these
 $nav-background-color: $color2;
