--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -1,9 +1,9 @@
-@import '../../../theme/colors';
-@import '../../../theme/fonts';
-@import '../../../theme/styles';
+@import '../../theme/colors';
+@import '../../theme/fonts';
+@import '../../theme/styles';
 
-@import '../page-container/variables';
-@import './variables';
+@import '../site-container/shared';
+@import './shared';
 
 
 // -------------------------------------------------
