--- a/src/app/core/site-container/_shared.scss
+++ b/src/app/core/site-container/_shared.scss
@@ -1,4 +1,4 @@
-@import '../../../theme/fonts';
+@import '../../theme/fonts';
 
 $header-banner-height: $font-line-height;
 $footer-banner-height: $font-line-height;
