--- a/src/app/core/site-container/site-container.component.scss
+++ b/src/app/core/site-container/site-container.component.scss
@@ -1,15 +1,15 @@
-@import '../../../theme/colors';
-@import './variables';
+@import '../../theme/colors';
+@import './shared';
 
-header.page-header {
+header.site-header {
   z-index: 2147483647;
 }
 
-footer.page-footer {
+footer.site-footer {
   z-index: 2147483647;
 }
 
-.page-banner {
+.site-banner {
   text-align: center;
 
   width: 100%;
@@ -34,21 +34,21 @@ footer.page-footer {
   height: $header-banner-height;
 }
 
-.page-footer {
+.site-footer {
   bottom: 0;
   left: 0;
   position: fixed;
   width: 100%;
 }
 
-.page-header {
+.site-header {
   left: 0;
   top: 0;
   position: fixed;
   width: 100%;
 }
 
-.page-content {
+.site-content {
   margin-bottom: 0;
   margin-top: 0;
 
