--- a/src/app/theme/_colors.scss
+++ b/src/app/theme/_colors.scss
@@ -7,12 +7,11 @@ $color3: #3c91e6;
 $color4: #14152f;
 
 
-$color-text-white: rgb(243, 243, 243);
-$color-text-black: rgb(34, 34, 34);
+$color-text-white: #fff;
+$color-text-light: #90a0b0;
 
-// $color-text-light: rgb(188, 188, 188);
-// $color-text-medium: rgb(153, 153, 153);
-// $color-text-dark: rgb(92, 92, 92);
+$color-text-black: #000;
+$color-text-dark: #324065;
 
 $color-bg-white: rgb(255, 255, 255);
 $color-bg-black: rgb(34, 34, 34);
@@ -21,9 +20,9 @@ $color-bg-light: rgb(243, 243, 243);
 $color-bg-dark-transparent: rgba(34, 34, 34, 0.6);
 $color-bg-light-transparent: rgba(255, 255, 255, 0.6);
 
-$color-border-light: rgb(238, 238, 238);
-$color-border-medium: rgb(170, 170, 170);
-$color-border-dark: rgb(68, 68, 68);
+$color-border-light: #bdc3c7;
+$color-border: #bdc3c7;
+$color-border-dark: #bdc3c7;
 
 
 //==================================
