Authguard and session stuff working

--- a/src/app/site/welcome/welcome.component.html
+++ b/src/app/site/welcome/welcome.component.html
@@ -1,1 +1,8 @@
-Welcome Component
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<h2>Welcome to ngx-starter</h2>
+			<p>This application is a starter for development.</p>
+		</div>
+	</div>
+</div>
