--- a/src/app/theme/_colors.scss
+++ b/src/app/theme/_colors.scss
@@ -1,10 +1,11 @@
 //==================================
 // Theme Colors
 //==================================
-$color1: #f15a2a;
-$color2: #2d2952;
-$color3: #3c91e6;
-$color4: #14152f;
+$color1: #45a29e;
+$color2: #1f2833;
+$color3: #1dc8c9;
+$color4: #0b0c10;
+$color5: #66fcf1;
 
 
 $color-text-white: #fff;
