--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -50,10 +50,12 @@
 	<ul class="nav nav-aux">
 
 		<!-- User Nav	-->
-		<li class="element nav-popover nav-popover-bottom">
+		<li
+			*ngIf="null != user"
+			class="element nav-popover nav-popover-bottom">
 			<a [ngClass]="{'highlight-link': userNavOpen}"
 			   [popover]="userNav"
-			   #userPopover="bs-popover"
+			   #userNavPopover="bs-popover"
 			   placement="right"
 			   [outsideClick]="true"
 			   (onShown)="userNavOpen = true;"
@@ -77,7 +79,7 @@
 		<li class="element nav-popover nav-popover-bottom">
 			<a [ngClass]="{'highlight-link': helpNavOpen}"
 			   [popover]="helpNav"
-			   #userPopover="bs-popover"
+			   #helpNavPopover="bs-popover"
 			   placement="right"
 			   [outsideClick]="true"
 			   (onShown)="helpNavOpen = true;"
@@ -92,13 +94,13 @@
 					<!-- Help -->
 					<li>
 						<a routerLink="/help"
-						   (click)="helpNav.toggle()">Help Docs</a>
+						   (click)="helpNavPopover.hide()">Help Docs</a>
 					</li>
 
 					<!-- About -->
 					<li>
 						<a routerLink="/about"
-						   (click)="helpNav.toggle()">About</a>
+						   (click)="helpNavPopover.hide()">About</a>
 					</li>
 
 				</ul>
