--- a/src/app/theme/ngx-bootstrap/popovers.scss
+++ b/src/app/theme/ngx-bootstrap/popovers.scss
@@ -82,6 +82,6 @@ ul.popover-menu {
 		@include font-color-dark($popover-content-font-color);
 
 		display: block;
-		padding: 10px;
+		padding: 10px 24px;
 	}
 }
