--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -22,7 +22,8 @@
 	<ul class="nav nav-main">
 
 		<!-- Element -->
-		<li class="element">
+		<li class="element"
+		    *ngIf="null != session">
 			<a tooltip="Explore"
 			   placement="right"
 			   [isDisabled]="navbarOpen"
@@ -32,7 +33,8 @@
 				<span [hidden]="!navbarOpen">Explore</span>
 			</a>
 		</li>
-		<li class="element">
+		<li class="element"
+			*ngIf="null != session">
 			<a tooltip="Search"
 			   placement="right"
 			   [isDisabled]="navbarOpen"
@@ -50,9 +52,8 @@
 	<ul class="nav nav-aux">
 
 		<!-- User Nav	-->
-		<li
-			*ngIf="null != user"
-			class="element nav-popover nav-popover-bottom">
+		<li class="element nav-popover nav-popover-bottom"
+			*ngIf="null != session">
 			<a [ngClass]="{'highlight-link': userNavOpen}"
 			   [popover]="userNav"
 			   #userNavPopover="bs-popover"
@@ -61,7 +62,7 @@
 			   (onShown)="userNavOpen = true;"
 			   (onHidden)="userNavOpen = false;">
 				<i class="fa fa-fw fa-user-circle"></i>
-				<span [hidden]="!navbarOpen">User Name</span>
+				<span [hidden]="!navbarOpen">{{ session?.name }}</span>
 			</a>
 
 			<ng-template #userNav>
