1. Added stylePreprocessorOptions to angular.json so files do not need to know relative path to style files. 2. Moved styles from src/app/theme to src/assets/styles 3. Did some preliminary work in updating fonts to use a different color schema. The color mappings may not be perfect right now, this was a tentative start,

--- a/src/app/common/loading-spinner/loading-spinner.component.scss
+++ b/src/app/common/loading-spinner/loading-spinner.component.scss
@@ -1,8 +1,8 @@
-@import '../../theme/colors';
-@import '../../theme/fonts';
+@import 'colors';
+@import 'typography';
 
 $loading-spinner-border: 5px;
-$loading-spinner-color: $color-text-dark;
+$loading-spinner-color: map-get($color-primary, 'darker');
 $loading-spinner-size: 42px;
 $loading-spinner-message-font-size: 24px;
 
