--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -1,6 +1,5 @@
-@import '../../theme/colors';
-@import '../../theme/fonts';
-@import '../../theme/styles';
+@import 'colors';
+@import 'typography';
 
 @import '../site-container/shared';
 @import './shared';
