--- a/src/assets/styles/_ngx-bootstrap.scss
+++ b/src/assets/styles/_ngx-bootstrap.scss
@@ -1,8 +1,7 @@
 @import '../../../node_modules/bootstrap/scss/bootstrap';
 
-@import './colors';
-@import './fonts';
-@import './styles';
+@import 'colors';
+@import 'typography';
 
 /**
  * ngx-bootstrap.scss
