--- a/src/app/core/site-navbar/_shared.scss
+++ b/src/app/core/site-navbar/_shared.scss
@@ -1,22 +1,21 @@
-@import '../../theme/colors';
-@import '../../theme/fonts';
+@import 'colors';
+@import 'typography';
 @import '../site-container/shared';
 
 // Specify these
-$nav-background-color: $color2;
+$nav-background-color: map-get($color-primary, 'default');
 $nav-closed-width: 54px;
 $nav-open-width: 238px;
 
-$nav-element-font-color: $color-text-white;
-$nav-element-font-dark-color: $color-text-black;
+$nav-element-font-color: map-get($color-primary, 'default-contrast');
 $nav-element-font-size: 16px;
 $nav-element-icon-size: 20px;
 $nav-element-icon-width: 27.5px;
 $nav-element-padding: 10px;
 $nav-element-text-margin-left: 20px;
 
-$nav-element-hover-color: $color3;
-$nav-element-hover-background-color: $color4;
+$nav-element-hover-color: map-get($color-accent, 'lighter');
+$nav-element-hover-background-color: map-get($color-primary, 'darker');
 
 $nav-element-active-background-color: $nav-element-hover-background-color;
 $nav-element-active-color: $nav-element-hover-color;
@@ -24,7 +23,7 @@ $nav-element-active-indicator-width: 4px;
 
 $nav-element-divider-margin: 10px;
 
-$nav-element-logo-color-bg: $color1;
+$nav-element-logo-color-bg: map-get($color-accent, 'default');
 $nav-element-logo-img-margin: 4px;
 $nav-element-logo-img-height: 50px;
 
