--- a/src/styles/_ngx-bootstrap.scss
+++ b/src/styles/_ngx-bootstrap.scss
@@ -1,7 +1,4 @@
-@import '../../../node_modules/bootstrap/scss/bootstrap';
-
-@import 'colors';
-@import 'typography';
+@import '../../node_modules/bootstrap/scss/bootstrap';
 
 /**
  * ngx-bootstrap.scss
