Updating the Getting Started Help in order to properly reference the Help icon in the left-hand navigation

--- a/src/app/common/help/getting-started/getting-started-help.component.html
+++ b/src/app/common/help/getting-started/getting-started-help.component.html
@@ -17,7 +17,7 @@
 	<h4>Looking for help?</h4>
 	<p>Help is also located throughout the app. Whenever you see this icon: <a class="no-href btn-icon inline-help-label"><i class="fa fa-question-circle help-icon"></i></a>, you can click to receive a tooltip.</p>
 	<p>
-		You can get back to this Help at any time by clicking on the question mark icon in the top-right corner of the site <i class="fa fa-question fa-lg"></i>.
+		You can get back to this Help at any time by clicking on the question mark icon <i class="fa fa-question-circle help-icon"></i> in the left-hand navigation of the site.
 	</p>
 </div>
 
