--- a/src/app/common/breadcrumb/breadcrumb.component.html
+++ b/src/app/common/breadcrumb/breadcrumb.component.html
@@ -2,7 +2,7 @@
 	<div *ngSwitchCase="false" class="header">{{ _homeBreadcrumb?.label }}</div>
 	<div *ngSwitchCase="true" class="header">
 		<span *ngFor="let b of breadcrumbs; let last = last" class="header-breadcrumb">
-			<a *ngIf="!last" (click)="router.navigate([b.url])">{{ b?.label }}</a>
+			<a *ngIf="!last" [routerLink]="[b.url]">{{ b?.label }}</a>
 			<span *ngIf="last">{{ b?.label }}</span>
 			<span *ngIf="!last" class="header-breadcrumb-separator"> > </span>
 		</span>
